force-app/main/default/objects/Unit_History__c/Unit_History__c.object-meta.xml
<CustomObject>
    <label>Unit History</label>
    <nameField>
        <displayFormat>UH-{0000}</displayFormat>
        <label>Unit Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>