force-app/main/default/objects/Unit_History__c/fields/Module_History__c.field-meta.xml
<CustomField>
    <fullName>Module_History__c</fullName>
    <label>Module History</label>
    <referenceTo>Module_History__c</referenceTo>
    <relationshipLabel>Unit History</relationshipLabel>
    <relationshipName>Unit_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>