force-app/main/default/objects/Unit_History__c/fields/Obtained_Points__c.field-meta.xml
<CustomField>
    <fullName>Obtained_Points__c</fullName>
    <formula>CASE(Tries__c, 0, 0, 1, Unit__r.Points__c, 2, Unit__r.Points__c * 0.5,Unit__r.Points__c * 0.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obtained Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>