force-app/main/default/objects/Unit_History__c/fields/Tries__c.field-meta.xml
<CustomField>
    <fullName>Tries__c</fullName>
    <formula>Tries_Aux__c  /  Unit__r.Question_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>