force-app/main/default/objects/Unit_History__c/fields/Tries_Aux__c.field-meta.xml
<CustomField>
    <fullName>Tries_Aux__c</fullName>
    <label>Tries Aux</label>
    <summaryForeignKey>Question_Answer__c.Unit_History__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>