force-app/main/default/objects/Unit_History__c/fields/TriesNumber__c.field-meta.xml
<CustomField>
    <fullName>TriesNumber__c</fullName>
    <label>TriesNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>