force-app/main/default/objects/Unit_History__c/fields/Unit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Unit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Completed</label>
    <type>Checkbox</type>
</CustomField>