force-app/main/default/objects/Unit_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Module_History__c</columns>
    <columns>Points__c</columns>
    <columns>Unit_Completed__c</columns>
    <columns>Tries__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>